--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </main>
 <h1> segunda pagina</h1>
 <P> isso aqui é um paragrafo</P>
+<img src="imagens/mrfresh-gato-1024x575.jpg" alt="gato meme">
 </main>
 <footer>
     <p> colegio tarquinio </p>
